Se modifico el curso

--- a/src/courseware/course/sidebar/sidebars/course-outline/CourseOutlineTray.scss
+++ b/src/courseware/course/sidebar/sidebars/course-outline/CourseOutlineTray.scss
@@ -51,6 +51,13 @@
     }
 }
 
+.custom-back-button {
+    color: rgb(204, 0, 255) !important;
+    font-size: 1.25rem; // o 20px, o usa h5, etc.
+    font-weight: bold;
+  }
+  
+
 #outline-sidebar-outline {
     margin-top: -1px;
 
